# knockout

./: .gitignore  CLAUDE.md
backend/: README.md  README_heuristics.md  afib_resnet30.pt  database.py  drugs.py  external_validator.py  halflife.json  knockout.db  model.py  patient_routes.py  pyproject.toml  sensor.py  server.py
backend/report/: sample_data.py
backend/routes/: __init__.py  afib_feedback.py  baselines.py  episodes.py  patient.py  sensor.py  synthetic.py
backend/seed/: clinical.json
backend/services/: baselines.py  synthetic.py
backend/simulations/: afib_episode.yaml  afib_heat.yaml  afib_paroxysmal.yaml  afib_postmeal.yaml  afib_stress.yaml  exercise_trigger.yaml  healthy_morning.yaml  healthy_postdose.yaml  healthy_resting.yaml  healthy_walk.yaml  missed_dose_collapse.yaml  nocturnal_bradycardia.yaml  normal_day.yaml  vt_storm.yaml
backend/tests/: conftest.py  test_baselines.py  test_baselines_api.py  test_push.py  test_smoke.py  test_synthetic.py
backend/training_data/: afib_20260301T144202Z_fbf4aced8a6c.json  afib_20260301T144239Z_60ead1b1476f.json  afib_20260301T144304Z_0abe5bfa7d57.json  afib_20260301T144332Z_ab4e922c0704.json  afib_20260301T144357Z_395c087eac78.json  afib_20260301T185214Z_7dcc16f94ff7.json  afib_20260301T185327Z_105fe8440e56.json  afib_20260301T185456Z_a64428f46c5d.json  afib_20260301T185459Z_a3fdbbbc5ceb.json  afib_20260301T190106Z_4d824df3ec24.json  healthy_20260301T144202Z_fbf4aced8a6c.json  healthy_20260301T144239Z_60ead1b1476f.json  healthy_20260301T144304Z_0abe5bfa7d57.json  (+7 more)
docs/: overview.md
tasks/: lessons.md  (+1 more)
(+61 files in other folders)
